--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
+libmatrix-malos (0.1.2) unstable; urgency=medium
+
+  * Protocol buffers namespaces support
+
+ -- Admobilize  <info@admobilize.com>  Mon, 10 Jul 2017 16:57:43 +0000
+
 libmatrix-malos (0.1.1) unstable; urgency=medium
 
   * Initial realease of MATRIX MALOS lib
 
- -- Kevin Patino  <kevin.patino@admobilize.com>  Thu, 23 Feb 2017 21:57:43 +0000
+ -- Admobilize  <info@admobilize.com>  Thu, 23 Feb 2017 21:57:43 +0000
