--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmatrixio-malos (0.1.3) unstable; urgency=medium
+
+  * Set as shared object library
+
+ -- Admobilize  <info@admobilize.com>  Tue, 5 Jul 2018 16:57:43 +0000
+
 libmatrixio-malos (0.1.2) unstable; urgency=medium
 
   * Protocol buffers namespaces support
