--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmatrixio-malos (0.1.4) unstable; urgency=medium
+
+  * Buster support
+
+ -- Andres Calderon <andres.calderon@admobilize.com>  Wed, 10 Jul 2019 10:00:00 +0000
+
 libmatrixio-malos (0.1.3) unstable; urgency=medium
 
   * Set as shared object library
